--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Devel-CoverX-Covered
-version: 0.001
+version: 0.002
 author:
   - 'Johan Lindström <johanl[ÄT]DarSerMan.com>'
 abstract: |-
@@ -17,11 +17,13 @@ requires:
   Devel::Cover: 0
   File::Basename: 0
   File::Slurp: 0
+  File::chdir: 0
   Getopt::Long: 0
   List::MoreUtils: 0
   Moose: 0
   Path::Class: 0.11
   Pod::Usage: 0
+  SQL::Abstract: 0
   Test::Differences: 0
   Test::Exception: 0
   Test::More: 0
@@ -29,7 +31,7 @@ requires:
 provides:
   Devel::CoverX::Covered:
     file: lib/Devel/CoverX/Covered.pm
-    version: 0.001
+    version: 0.002
   Devel::CoverX::Covered::Db:
     file: lib/Devel/CoverX/Covered/Db.pm
 generated_by: Module::Build version 0.2808
