--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Devel-CoverX-Covered
-version: 0.007
+version: 0.008
 author:
   - 'Johan Lindström <johanl[ÄT]DarSerMan.com>'
 abstract: |-
@@ -20,6 +20,7 @@ requires:
   File::chdir: 0
   Getopt::Long: 0
   List::MoreUtils: 0
+  Memoize: 0
   Moose: 0
   Path::Class: 0.11
   Pod::Usage: 0
@@ -31,7 +32,7 @@ requires:
 provides:
   Devel::CoverX::Covered:
     file: lib/Devel/CoverX/Covered.pm
-    version: 0.007
+    version: 0.008
   Devel::CoverX::Covered::Db:
     file: lib/Devel/CoverX/Covered/Db.pm
 generated_by: Module::Build version 0.2808
